--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/logo/FundoEscuro.png" type="image/x-icon">
-    <title>ManeTech | Home</title>
+    <link rel="shortcut icon" href="images/logo/LogoTransparente.png" type="image/x-icon">
+    <title>ManexTech | Home</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/24ae7fcf09.js" crossorigin="anonymous"></script>
 </head>
@@ -107,7 +107,7 @@
                                     <div class="feature_image">
                                         <img src="images/image320x240.png" alt="">
                                     </div><!--feature_image-->
-                                    <div class="image_mini_box">
+                                    <div class="image_mini_box flex">
                                         <div class="image_mini">
                                             <img src="images/image320x240.png" alt="">
                                         </div><!--image_mini-->
